--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -1,3 +1,22 @@
 appTitle=com.john.ui5.ts.app1
 appDescription=UI5 Application com.john.ui5.ts.app1
 btnText=Sag Hallo
+
+dashboardTitle=Übersicht
+dashboardWelcome=Willkommen im Dashboard
+openWizardBtn=Bestellung erstellen
+
+wizardTitle=Bestellassistent
+stepAckTitle=Bestätigung
+stepCreateTitle=Bestellung erstellen
+stepReviewTitle=Überprüfen
+ackText=Bitte bestätigen Sie die Bedingungen, um fortzufahren
+ackCheckText=Ich bestätige
+orderNamePlaceholder=Bestellname
+orderQtyPlaceholder=Anzahl
+submitBtn=Absenden
+cancelBtn=Abbrechen
+reviewText=Bitte bestätigen Sie Ihre Bestellung: {0} (Anzahl: {1})
+nextBtn=Weiter
+orderNameRequired=Bitte geben Sie einen Bestellnamen an.
+orderQtyInvalid=Bitte geben Sie eine gültige Anzahl (> 0) an.
