--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -1,3 +1,22 @@
 appTitle=com.john.ui5.ts.app1
 appDescription=UI5 Application com.john.ui5.ts.app1
 btnText=Say Hello
+
+dashboardTitle=Dashboard
+dashboardWelcome=Welcome to the dashboard
+openWizardBtn=Create Order
+
+wizardTitle=Order Wizard
+stepAckTitle=Acknowledgement
+stepCreateTitle=Order Creation
+stepReviewTitle=Review
+ackText=Please acknowledge the terms to proceed
+ackCheckText=I acknowledge
+orderNamePlaceholder=Order name
+orderQtyPlaceholder=Quantity
+submitBtn=Submit
+cancelBtn=Cancel
+reviewText=Please confirm your order: {0} (qty: {1})
+nextBtn=Next
+orderNameRequired=Please provide an order name.
+orderQtyInvalid=Please provide a valid quantity (greater than 0).
