Add test message to i18n properties

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,3 +20,5 @@ reviewText=Please confirm your order: {0} (qty: {1})
 nextBtn=Next
 orderNameRequired=Please provide an order name.
 orderQtyInvalid=Please provide a valid quantity (greater than 0).
+
+testMsg=Test Message
